Fix for StyleGuide not showing up, Set Billing as Shipping not getting unchecked automatically on form field change, and touch buttons showing up on non-touch devices.

--- a/webroot/skin/frontend/blueacorn/gp/scss/mixin/_touch-button.scss
+++ b/webroot/skin/frontend/blueacorn/gp/scss/mixin/_touch-button.scss
@@ -3,7 +3,9 @@
 // Building this as a mixin (rather than an extendable class) since it will be included within mq breakpoints, and
 // extending doesn't work within media queries: http://sass-lang.com/documentation/file.SASS_REFERENCE.html#_in_directives
 @mixin touch-button {
-    color: $c-text;
-    background-color: $c-module-background;
-    padding: 5px 10px;
+    .touch & {
+        color: $c-text;
+        background-color: $c-module-background;
+        padding: 5px 10px;
+    }
 }
